#:tombi schema.strict = false

[project]
name = "lattica-pm"
version = "0.0.1"
description = "Prediction market data aggregator "
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "wkflanders", email = "wflan@seas.upenn.edu" }]
dependencies = ["httpx>=0.27.0", "pandas>=2.0.0"]

[dependency-groups]
dev = [
  "anyio>=4.0.0",
  "pre-commit>=4.5.1",
  { include-group = "lint" },
  { include-group = "security" },
  { include-group = "test" },
]
lint = [
  "black>=25.9.0",
  "flake8>=7.3.0",
  "flake8-bugbear>=25.10.21",
  "flake8-comprehensions>=3.17.0",
  "flake8-docstrings>=1.7.0",
  "isort>=7.0.0",
  "mypy>=1.18.2",
  "ruff>=0.14.3",
  "types-requests>=2.32.4.20250913",
]
security = ["bandit>=1.8.6", "vulture>=2.14"]
test = [
  "pytest>=8.4.2",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=6.0.0",
  "pytest-timeout>=2.2.0",
  "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pm"]

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["**/.venv/**", "**/build/**", "**/dist/**"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ['\.venv', "build", "dist", '\.eggs', "test", "monitor"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.ruff]
line-length = 120
exclude = [
  ".venv",
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".eggs",
  "*.egg-info",
  "monitor",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
